ECOSCOM-3386 - fix tab scroll; fix dashboard scrollbar

--- a/src/components/PageTabs/style.scss
+++ b/src/components/PageTabs/style.scss
@@ -281,6 +281,9 @@
   }
 
   &__panel {
+    overflow: scroll;
+    display: block;
     height: 100%;
+    width: 100%;
   }
 }
